2007-03-21  Akim Demaille  <akim.demaille@free.fr>

	* Makefile.am (CLEANFILES): Remove what's handled by init.mk.

2007-03-21  Akim Demaille  <akim.demaille@free.fr>

	Catch up with the trunk
	No longer make uobject an external of src, let src/uobject be
	an external of ".".
	No longer subscribe to sdk, useless.
	* Makefile.am: Adjust.
	(check-html): Import from the trunk.

2007-03-21  Akim Demaille  <akim.demaille@free.fr>

	Update externals.
	* configure.ac: Use URBI_TESTS.

2007-03-12  POTHIER Benoit  <pothier@gostai.com>

	Remove space in the banner.
	* src/ubanner.cc: Here.

2007-03-12  POTHIER Benoit  <pothier@gostai.com>

	Update banner copyright date.
	* src/ubanner.cc: Here.

2007-03-06  Jean-Christophe Baillie  <baillie@gostai.com>

	This flag enforces the business decision described here:
	https://core.gostai.com/projects/business/wiki/ProductOfferStrategy

	It allows to build an URBI Engine that will reject any remote UObject
	'external' request, effectively disabling UNotifyChange,
	UBindFunction, etc, which makes this remote UObject useless.

	A simple -DREMOTE_UOBJECT_DISABLED flag in configure will build this
	crippled version.

	add the REMOTE_UOBJECT_DISABLED flag for the 'free' version  
	* src/ucommand.cc: exit from UCommand_BINDER if the
	REMOTE_UOBJECT_DISABLED flag is on.

2007-02-22  Matthieu Nottale  <nottale@gostai.com>

	Add a parameter to createTCPServer to specify address to bind to 
	* src/network/bsdnet/network.cc: Here, propagate in  TCPServerPipe::init.
	* src/network/bsdnet/network.hh: Also here.

2007-02-22  Akim Demaille  <akim.demaille@free.fr>

	Fix #133
	We focused on the fact that the current code is boggus and
	missed the fact that my proposal was addressing one issue, but
	introducing another one.  We were trading one bug for another,
	the latter having a much bigger impact.

	I suggested to replace

	# define ADDMEM(x)   {usedMemory += ((int)(x*1.15));}
	# define FREEMEM(x)  {usedMemory -= ((int)(x*1.15));}
